[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Marco Di Gennaro <mdg@atomistic-modelling.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.0"
jupyterlab-execute-time = "^3.1.2"
fastapi = "^0.111.0"
unicorn = "^2.0.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
